--- a/css/index.css
+++ b/css/index.css
@@ -1,23 +1,76 @@
-#title
+body
 {
-    background-color: #097969;
-    color: #F88379;
+    background-color: #D9EAD3;
+    padding: 50px;
+    margin: 0px;
+    font-size: 15pt;
+    
+}
+
+.box
+{
+    max-width: 650px;
+    margin: 0 auto;
+    padding: 15px 15px;
+}
+
+
+.title
+{
+    padding: 0;
+    padding-bottom: 10px;
+    margin: 0;
+    color: darkblue;
     text-align: center;
 }
 
-#divider
+.subtitle
 {
-    background-color: black;
+    padding-top: 10px;
+    padding-bottom: 3px;
+    margin: 0;
+}
+
+.text
+{
+    padding: 0;
+    margin: 0;
+}
+
+#about
+{
+    background-color: #FFE599;
+    /* text-align: center; */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#about_block
+{
+    /* background-color: brown; */
+    margin-left: 3%;
+    margin-right: 1%;
+}
+
+#about_title
+{
+    margin-top: 25px;
     color: black;
-    font-size: 1;
-    padding: 0px 0px 0px 0px;
-    height: 2px;
+    text-align: left;
 }
 
-#exp
+#about_text
 {
-    width: 100%;
-    visibility: hidden;
-    text-align: center;
-    background-color: red;
+    text-align: left;
+}
+
+#projects
+{
+    background-color: #93C47D;
+}
+
+#pic
+{
+    width: 150px;
+    border-radius: 10px;
 }
