--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 body
 {
     background-color: #D9EAD3;
-    padding: 50px;
+    padding: 20px;
     margin: 0px;
     font-size: 15pt;
     
@@ -69,8 +69,14 @@ body
     background-color: #93C47D;
 }
 
+/* Miscellaneous stuff. */
 #pic
 {
     width: 150px;
     border-radius: 10px;
+}
+
+#umich
+{
+    color: #5A5A5A;
 }
